app/assets/stylesheets/modules/gallery-view.css.scss
/* Note Blacklight-Gallery plugin is being used but styles and partials are
   being overridden.
*/

$gallery-document-width: 184px;

.gallery {
  .item-thumb {
    height: 220px;
  }

  .callnumber-bar {
    background-color: $gray-light;
    color: $body-bg;
    width: $gallery-document-width;
    @extend .text-center;
    margin-left: -5px;
    overflow: hidden;
    white-space: nowrap;
    height: $line-height-base;
  }

  .caption {
    padding-left: 4px;
    padding-right: 4px;
  }

  .caption h5 {
    overflow:hidden;
    max-height: 4.4em;
  }

  .gallery-document {
    position: relative;
    margin: 0px 5px 15px 5px;
    float: left;
    display: inline;
    width: $gallery-document-width;
    height: 400px;
    border: 1px solid $panel-inner-border;
  }

  .document-counter {
    display: none;
  }

  .index-document-functions {
    margin-left: 28px;
  }

  div.gallery-buttons {
    height: 30px;
    width: 100%;
    position: absolute;
    bottom: 6px;
    display: inline-block;

    .preview-button {
      position: absolute;
      bottom: 0px;
      right: 8px;
    }
  }
  .stacks-image {
    max-width: 183px;
    max-height: 200px;
  }
}

span.fake-cover {
  width: 130px;
  height: 195px;
  text-align: center;
  position: relative;
  left: 27px;
  display: block;
  background: $well-bg;
  border: 1px solid $well-border;
}

div.fake-cover-text-wrapper {
  width: 130px;
  height: 195px;
  display: table-cell;
  vertical-align: middle;
}

div.fake-cover-text {
  padding: 4px;
  max-height: 7.3em;
  overflow: hidden;
}

.view-icon-gallery {
  &:before { content: "\e011"; }
}
.view-icon-slideshow {
  &:before { content: "\e158"; }
}

